[package]
name = "arkade-address"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bip39 = "2.0"
bitcoin = { version = "0.32.7", features = ["rand"] }
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
ark-core  = { git = "https://github.com/arkade-os/rust-sdk" }
ark-delegator = { git = "https://github.com/arkade-os/rust-sdk" }
ark-rest = { git = "https://github.com/arkade-os/rust-sdk" }
